--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 body{
     font-family: 'Montserrat', sans-serif;
-    background-image: url(img/diseñoCaja.jpg);
+    background-image: url(img/disenioCaja.jpg);
     background-size: cover;
 }
 img{
