--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ li a{
 }
 
 .torta{
-    width: 350px;
-    height: 350px;
+    width: 280px;
+    height: 280px;
     object-fit: cover;
     margin: 5px;
     border-radius: 5px;   
@@ -79,6 +79,7 @@ main a{
     width: 30px;
     height: 30px;
     padding: 25px;
+    background-color: aqua;
 }
 
 #logo {
@@ -101,25 +102,27 @@ h1{
     width: 250px;
 }
 footer{
-    display: flex;
     background-color: rgb(58, 56, 56);
-    justify-content: space-between;
-    padding: 15px;
+    padding: 20px;
+    height: 220px;
 }
+
 .footer{
-    display: flex;
-    flex-direction: column;
+    color: beige ;
+
 }
-.footer li{
-    color: beige;
+
+.footer a{
+   color: beige; 
+   text-decoration: none;
 }
-.footer a, li, p{
-    color: beige;
+/*.footer a, li, p{
+    
     font-weight: 300;
     font-size: 15px;
     line-height: 8px;
     padding: 15px;
-}
+}*/
 .contacto, .redes-sociales {
     color: #f5f5dc;
     display: flex;
@@ -128,10 +131,10 @@ footer{
     align-items: center;
     margin-bottom: 20px;
 }
-.iconos-redes{
+/*.iconos-redes{
     display: flex;
     align-items: center;
-}
+}*/
 
 .padre-cards{
     width: 100%;
@@ -178,6 +181,12 @@ footer{
     color: rgb(29, 28, 28);
     line-height: 30px;
 }
+@media (min-width: 768px) {
+    .nombre-producto {
+    font-size: 15px;
+    }
+}
+
 .precio-producto{
     padding: 0px 40px;
     font-weight: 500;
