--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -216,7 +216,7 @@ form{
 
 .logo-contacto{
     display: flex;
-    width: 250px;
+    flex-direction: column;
     margin-top: 30px;
     align-items: center;
     justify-content: space-around;
@@ -226,7 +226,15 @@ form{
         font-weight: 500;
         background-color: rgba(248, 244, 244, 0.7);
         padding: 10px;
-}
+        font-size: 11px;    
+    }
+    @media (min-width: 768px){
+        flex-direction: row;
+        p{
+            font-size: 18px;
+        }
+        }
+
 }
 
 .formulario{
@@ -237,6 +245,10 @@ form{
 #formulario-contacto label{
     color: rgb(58, 58, 58);
     background-color: rgba(248, 244, 244, 0.7);
+    font-size: 13px;
+    @media (min-width: 768px){
+        font-size: 18px;
+        }
 }
 .mapa{
     display: flex;
@@ -247,6 +259,10 @@ form{
         color: rgb(58, 58, 58);
         background-color: rgba(248, 244, 244, 0.7);
         padding: 10px;
+        font-size: 11px;
+        @media (min-width: 768px){
+            font-size: 18px;
+            }
     }
 }
 header nav{
