--- a/scss/_comunes.scss
+++ b/scss/_comunes.scss
@@ -100,7 +100,7 @@ footer{
 }
 .num-tel{
     display: flex;
-    font-size: $fuente-mini +1;
+    font-size: $fuente-mini (+1);
 
 }
 
@@ -112,3 +112,18 @@ footer{
     align-items: center;
     margin-bottom: 20px;
 }
+.carrito{
+    width: 40px;
+
+}
+
+.seccion-carrito{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+   
+}
+
+
+    
